--- a/.github/workflows/daily-build.yml
+++ b/.github/workflows/daily-build.yml
@@ -11,4 +11,4 @@ jobs:
     uses: ballerina-platform/ballerina-library/.github/workflows/daily-build-connector-template.yml@main
     secrets: inherit
     with:
-      repo-name: module-ballerinax-ai.model.provider.deepseek
+      repo-name: module-ballerinax-ai.deepseek
