--- a/ballerina/build.gradle
+++ b/ballerina/build.gradle
@@ -24,7 +24,7 @@ plugins{
 
 description = 'Azure Model Provider - Ballerina'
 
-def packageName = "ai.model.provider.deepseek"
+def packageName = "ai.deepseek"
 def packageOrg = "ballerinax"
 def tomlVersion = stripBallerinaExtensionVersion("${project.version}")
 def ballerinaTomlFilePlaceHolder = new File("${project.rootDir}/build-config/resources/Ballerina.toml")
