--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -3,9 +3,9 @@ authors = ["Ballerina"]
 distribution = "2201.12.0"
 keywords = ["AI", "Agent", "Deepseek", "Model", "Provider"]
 license = ["Apache-2.0"]
-name = "ai.model.provider.deepseek"
+name = "ai.deepseek"
 org = "ballerinax"
-repository = "https://github.com/ballerina-platform/module-ballerinax-ai.model.provider.deepseek"
+repository = "https://github.com/ballerina-platform/module-ballerinax-ai.deepseek"
 version = "@toml.version@"
 
 [platform.java21]
