--- a/settings.gradle
+++ b/settings.gradle
@@ -29,11 +29,11 @@ plugins {
     id "com.gradle.enterprise" version "3.2"
 }
 
-rootProject.name = 'module-ballerinax-ai.model.provider.deepseek'
+rootProject.name = 'module-ballerinax-ai.deepseek'
 
-include ':ai.model.provider.deepseek-ballerina'
+include ':ai.deepseek-ballerina'
 
-project(':ai.model.provider.deepseek-ballerina').projectDir = file("ballerina")
+project(':ai.deepseek-ballerina').projectDir = file("ballerina")
 
 gradleEnterprise {
     buildScan {
