--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -10,3 +10,15 @@ version = "@toml.version@"
 
 [platform.java21]
 graalvmCompatible = true
+
+[[platform.java21.dependency]]
+groupId = "io.ballerina.lib"
+artifactId = "ai.model.provider.deepseek-native"
+version = "@toml.version@"
+path = "../native/build/libs/ai.model.provider.deepseek-native-@project.version@.jar"
+
+[[dependency]]
+org = "ballerina"
+name = "ai"
+version = "1.0.1"
+repository="local"
