--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,7 @@
  */
 
 plugins {
+    id "com.github.spotbugs-base"
     id 'com.github.johnrengelman.shadow'
     id 'de.undercouch.download'
     id 'net.researchgate.release'
@@ -60,8 +61,12 @@ allprojects {
 def moduleVersion = project.version.replace("-SNAPSHOT", "")
 
 task build {
+    dependsOn(':ai.model.provider.deepseek-native:build')
+    dependsOn(':ai.model.provider.deepseek-compiler-plugin:build')
     dependsOn(':ai.model.provider.deepseek-ballerina:build')
 }
+
+tasks.findByPath(':ai.model.provider.deepseek-ballerina:build').mustRunAfter(':ai.model.provider.deepseek-native:build')
 
 release {
     buildTasks = ['build']
