--- a/settings.gradle
+++ b/settings.gradle
@@ -7,6 +7,7 @@
 
 pluginManagement {
     plugins {
+        id "com.github.spotbugs-base" version "${spotbugsPluginVersion}"
         id "com.github.johnrengelman.shadow" version "${shadowJarPluginVersion}"
         id "de.undercouch.download" version "${downloadPluginVersion}"
         id "net.researchgate.release" version "${releasePluginVersion}"
@@ -31,9 +32,15 @@ plugins {
 
 rootProject.name = 'module-ballerinax-ai.model.provider.deepseek'
 
+include ':checkstyle'
+include ':ai.model.provider.deepseek-native'
 include ':ai.model.provider.deepseek-ballerina'
+include ':ai.model.provider.deepseek-compiler-plugin'
 
+project(':checkstyle').projectDir = file("build-config${File.separator}checkstyle")
+project(':ai.model.provider.deepseek-native').projectDir = file("native")
 project(':ai.model.provider.deepseek-ballerina').projectDir = file("ballerina")
+project(':ai.model.provider.deepseek-compiler-plugin').projectDir = file('compiler-plugin')
 
 gradleEnterprise {
     buildScan {
