--- a/build-config/resources/CompilerPlugin.toml
+++ b/build-config/resources/CompilerPlugin.toml
@@ -3,7 +3,7 @@ id = "ai-compiler-plugin"
 class = "io.ballerina.lib.ai.deepseek.AiDeepseekCompilerPlugin"
 
 [[dependency]]
-path = "../compiler-plugin/build/libs/ai.model.provider.deepseek-compiler-plugin-@project.version@.jar"
+path = "../compiler-plugin/build/libs/ai.deepseek-compiler-plugin-@project.version@.jar"
 
 [[dependency]]
 path = "../compiler-plugin/build/libs/ballerina-to-openapi-@ballerinaToOpenApiVersion.version@.jar"
