--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -13,6 +13,6 @@ graalvmCompatible = true
 
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
-artifactId = "ai.model.provider.deepseek-native"
-version = "1.0.1"
-path = "../native/build/libs/ai.model.provider.deepseek-native-1.0.1-SNAPSHOT.jar"
+artifactId = "ai.deepseek-native"
+version = "1.0.0"
+path = "../native/build/libs/ai.deepseek-native-1.0.0-SNAPSHOT.jar"
