--- a/build.gradle
+++ b/build.gradle
@@ -61,12 +61,12 @@ allprojects {
 def moduleVersion = project.version.replace("-SNAPSHOT", "")
 
 task build {
-    dependsOn(':ai.model.provider.deepseek-native:build')
-    dependsOn(':ai.model.provider.deepseek-compiler-plugin:build')
-    dependsOn(':ai.model.provider.deepseek-ballerina:build')
+    dependsOn(':ai.deepseek-native:build')
+    dependsOn(':ai.deepseek-compiler-plugin:build')
+    dependsOn(':ai.deepseek-ballerina:build')
 }
 
-tasks.findByPath(':ai.model.provider.deepseek-ballerina:build').mustRunAfter(':ai.model.provider.deepseek-native:build')
+tasks.findByPath(':ai.deepseek-ballerina:build').mustRunAfter(':ai.deepseek-native:build')
 
 release {
     buildTasks = ['build']
