--- a/settings.gradle
+++ b/settings.gradle
@@ -33,14 +33,14 @@ plugins {
 rootProject.name = 'module-ballerinax-ai.deepseek'
 
 include ':checkstyle'
-include ':ai.model.provider.deepseek-native'
-include ':ai.model.provider.deepseek-ballerina'
-include ':ai.model.provider.deepseek-compiler-plugin'
+include ':ai.deepseek-native'
+include ':ai.deepseek-ballerina'
+include ':ai.deepseek-compiler-plugin'
 
 project(':checkstyle').projectDir = file("build-config${File.separator}checkstyle")
-project(':ai.model.provider.deepseek-native').projectDir = file("native")
-project(':ai.model.provider.deepseek-ballerina').projectDir = file("ballerina")
-project(':ai.model.provider.deepseek-compiler-plugin').projectDir = file('compiler-plugin')
+project(':ai.deepseek-native').projectDir = file("native")
+project(':ai.deepseek-ballerina').projectDir = file("ballerina")
+project(':ai.deepseek-compiler-plugin').projectDir = file('compiler-plugin')
 
 gradleEnterprise {
     buildScan {
