--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -6,7 +6,7 @@ license = ["Apache-2.0"]
 name = "ai.deepseek"
 org = "ballerinax"
 repository = "https://github.com/ballerina-platform/module-ballerinax-ai.deepseek"
-version = "1.0.0"
+version = "1.0.1"
 
 [platform.java21]
 graalvmCompatible = true
@@ -14,5 +14,5 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "ai.deepseek-native"
-version = "1.0.0"
-path = "../native/build/libs/ai.deepseek-native-1.0.0.jar"
+version = "1.0.1"
+path = "../native/build/libs/ai.deepseek-native-1.0.1-SNAPSHOT.jar"
