[Automated] Update the toml files

--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -17,3 +17,10 @@ groupId = "io.ballerina.lib"
 artifactId = "ai.deepseek-native"
 version = "1.0.3"
 path = "../native/build/libs/ai.deepseek-native-1.0.3-SNAPSHOT.jar"
+
+
+[[dependency]]
+org="ballerina"
+name="ai"
+version="1.4.2"
+repository="local"
