--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -7,7 +7,7 @@ icon="icon.png"
 name = "ai.deepseek"
 org = "ballerinax"
 repository = "https://github.com/ballerina-platform/module-ballerinax-ai.deepseek"
-version = "1.0.3"
+version = "1.0.4"
 
 [platform.java21]
 graalvmCompatible = true
@@ -15,5 +15,5 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "ai.deepseek-native"
-version = "1.0.3"
-path = "../native/build/libs/ai.deepseek-native-1.0.3.jar"
+version = "1.0.4"
+path = "../native/build/libs/ai.deepseek-native-1.0.4-SNAPSHOT.jar"
