--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -7,7 +7,7 @@ icon="icon.png"
 name = "ai.deepseek"
 org = "ballerinax"
 repository = "https://github.com/ballerina-platform/module-ballerinax-ai.deepseek"
-version = "1.0.4"
+version = "1.1.0"
 
 [platform.java21]
 graalvmCompatible = true
@@ -15,5 +15,11 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "ai.deepseek-native"
-version = "1.0.4"
-path = "../native/build/libs/ai.deepseek-native-1.0.4-SNAPSHOT.jar"
+version = "1.1.0"
+path = "../native/build/libs/ai.deepseek-native-1.1.0-SNAPSHOT.jar"
+
+[[dependency]]
+org="ballerina"
+name="ai"
+version="1.6.0"
+repository="local"
