--- a/ballerina/Ballerina.toml
+++ b/ballerina/Ballerina.toml
@@ -1,13 +1,13 @@
 [package]
 authors = ["Ballerina"]
 distribution = "2201.12.0"
-keywords = ["AI", "Agent", "Deepseek", "Model", "Provider"]
+keywords = ["Agent", "Model", "Provider", "Vendor/Deepseek", "Area/AI", "Type/Connector"]
 license = ["Apache-2.0"]
 icon="icon.png"
 name = "ai.deepseek"
 org = "ballerinax"
 repository = "https://github.com/ballerina-platform/module-ballerinax-ai.deepseek"
-version = "1.1.0"
+version = "1.1.1"
 
 [platform.java21]
 graalvmCompatible = true
@@ -15,5 +15,5 @@ graalvmCompatible = true
 [[platform.java21.dependency]]
 groupId = "io.ballerina.lib"
 artifactId = "ai.deepseek-native"
-version = "1.1.0"
-path = "../native/build/libs/ai.deepseek-native-1.1.0.jar"
+version = "1.1.1"
+path = "../native/build/libs/ai.deepseek-native-1.1.1-SNAPSHOT.jar"
