--- a/build-config/resources/Ballerina.toml
+++ b/build-config/resources/Ballerina.toml
@@ -1,7 +1,7 @@
 [package]
 authors = ["Ballerina"]
 distribution = "2201.12.0"
-keywords = ["AI", "Agent", "Deepseek", "Model", "Provider"]
+keywords = ["Agent", "Model", "Provider", "Vendor/Deepseek", "Area/AI", "Type/Connector"]
 license = ["Apache-2.0"]
 icon="icon.png"
 name = "ai.deepseek"
